infrastructure/keycloak/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: nutritrack-dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nutritrack-gateway
      namespace: nutritrack-dev
  hostnames:
    - "keycloak.dev.nutritrack360.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # The Keycloak Operator automatically creates a service named <cr-name>-service
        - group: ""
          kind: Service
          name: nutritrack-keycloak-service
          port: 8080
          weight: 1
